<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Third Activity"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextThirdValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextThirdValue"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonThirdToFirstActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonThirdToFirstActivity" />

        <TextView
            android:id="@+id/textViewThirdResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewThirdResult" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>