<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Second Activity"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextSecondValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editTextSecondValue"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonSecondToThirdActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonSecondToThirdActivity" />

        <TextView
            android:id="@+id/textViewSecondResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewSecondResult"
            android:textAlignment="center" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>